--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.20",
-    "base64-img": "^1.0.4",
+    "base64-img": "^1.0.1",
     "cropperjs": "^1.6.2",
     "docx": "^9.1.0",
     "docxtemplater": "^3.55.9",
@@ -26,6 +26,7 @@
     "react-cropper": "^2.3.3",
     "react-dom": "^18.3.1",
     "react-easy-crop": "^5.2.0",
+    "react-native-svg": "^15.11.1",
     "react-qr-code": "^2.0.15",
     "react-router-dom": "^7.1.1",
     "react-to-print": "^3.0.4"
