--- a/package.json
+++ b/package.json
@@ -21,13 +21,12 @@
     "jspdf-autotable": "^3.8.4",
     "pizzip": "^3.1.7",
     "postcss": "^8.4.49",
-    "qrcode.react": "^4.2.0",
+    "qrcode": "^1.5.4",
     "react": "^18.3.1",
     "react-cropper": "^2.3.3",
     "react-dom": "^18.3.1",
     "react-easy-crop": "^5.2.0",
     "react-native-svg": "^15.11.1",
-    "react-qr-code": "^2.0.15",
     "react-router-dom": "^7.1.1",
     "react-to-print": "^3.0.4"
   },
