Implement QrCode Reader to read data with & without internet

--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "docxtemplater": "^3.55.9",
     "file-saver": "^2.0.5",
     "html2canvas": "^1.4.1",
-    "jspdf": "^2.5.2",
-    "jspdf-autotable": "^3.8.4",
+    "jspdf": "^3.0.0",
+    "jspdf-autotable": "^5.0.2",
     "pizzip": "^3.1.7",
     "postcss": "^8.4.49",
     "qrcode": "^1.5.4",
@@ -29,6 +29,7 @@
     "react-dom": "^18.3.1",
     "react-easy-crop": "^5.2.0",
     "react-native-svg": "^15.11.1",
+    "react-qr-reader": "^3.0.0-beta-1",
     "react-router-dom": "^7.1.1",
     "react-select": "^5.10.0",
     "react-to-print": "^3.0.4",
